changin list of waves to queue of waves